# langchain-course

./: .env.example  .gitignore  Dockerfile  MEMORY.md  SYSTEM.md  approve.py  config.py  daemon.py  fix_captions.py  health.py  main.py  pyproject.toml  railway.toml  review.py  send_notifications.py  sunday.py  telegram_bot.py
agents/: analytics_agent.py  content_publisher.py  content_reviewer.py  content_strategist.py  culinary_supervisor.py  design_supervisor.py  engagement_advisor.py  image_generator.py  lead_generator.py
brands/: __init__.py  loader.py
brands/_template/: .env.example  config.yaml
brands/capa-co/: DESIGN.md  config.yaml
brands/mila/: CONTENT_GUIDE.md  DESIGN.md  config.yaml
db/: connection.py  schema.py
docs/: CONTENT_GUIDE.md  SETUP.md  robustness-plan.md  video-prompt.md
graph/: orchestrator.py  state.py
memory/: feedback_image_style.md  project_instagram_agents.md  user_profile.md
tests/: test_queue_detail.py  test_token_refresh.py
tools/: approval.py  brand_credentials.py  content_guide.py  db_tools.py  image_gen.py  instagram.py  research.py  token_refresh.py
web/: __init__.py  auth.py  brand_switcher.py  db.py  dev.py
web/routes/: analytics.py  dashboard.py  engagement.py  leads.py  logs.py  queue.py  schedule.py  system.py
web/static/: style.css
web/templates/: base.html
web/templates/components/: global_stats.html  recent_runs.html
web/templates/pages/: analytics.html  dashboard.html  engagement.html  leads.html  login.html  logs.html  queue.html  queue_detail.html  schedule.html  system.html
