[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "black>=26.3.1",
    "fal-client>=0.13.2",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "psycopg2-binary>=2.9.10",
    "requests>=2.33.0",
    "schedule>=1.2.2",
    "tavily-python>=0.7.23",
]
